--- a/client/package.json
+++ b/client/package.json
@@ -8,25 +8,27 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.10.15",
-    "@reduxjs/toolkit": "^1.9.2",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/history": "^4.7.11",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.3",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.21.4",
     "history": "^4.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
