--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.10.15",
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.10.15",
@@ -30,7 +31,8 @@
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
