--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.10.15",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^1.16.5",
+    "@stripe/stripe-js": "^1.47.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
