--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-slick": "^0.23.10",
     "axios": "^0.21.4",
     "history": "^4.7.2",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
